Remake of the script with new method

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-8 d-flex justify-content-center">
-                <h2>Lista della spesa:</h2>
-                <ul></ul>
+        <div class="row mt-5">
+            <div class="col-12 col-md-8 d-flex flex-column align-items-center">
+                <h2 class="text-danger">Lista della spesa:</h2>
+                <div class="mt-5">
+                    <ul></ul>
+                </div>
             </div>
         </div>
     </div>
